     for ( wxString::const_iterator p = s.begin(); (bool)*p; ++p )

- Virtual wxHtmlParser::AddText() takes wxString, not wxChar*, argument now.

- Funtions that took wxChar* arguments that could by NULL in wxWidgets 2.8.
  are deprecated and passing NULL to them won't compile anymore, wxEmptyString
  must be used instead.

- Removed insecure wxGets() and wxTmpnam() functions.


Deprecated methods and their replacements
-----------------------------------------

- wxCreateGreyedImage() deprecated, use wxImage::ConvertToGreyscale() instead.
- wxString::GetWriteBuf() and UngetWriteBuf() deprecated, using wxStringBuffer
  or wxStringBufferLength instead.
- wxDIRCTRL_SHOW_FILTERS style is deprecated, filters are alwsys shown if
  specified so this style should simply be removed
- wxDocManager::MakeDefaultName() replaced by MakeNewDocumentName() and
  wxDocument::GetPrintableName() with GetUserReadableName() which are simpler
  to use


Major new features in this release
----------------------------------


2.9.0
-----

All:

- Added wxJoin() and wxSplit() functions (Francesco Montorsi)
- Added wxMutex::LockTimeout() (Aleksandr Napylov)
- Added wxMemoryInputStream(wxInputStream&) ctor (Stas Sergeev)
- Implemented wxMemoryInputStream::CanRead()
- Added wxEXEC_BLOCK flag (Hank Schultz)
- Add support for wxStream-derived classes to wxRTTI (Stas Sergeev)
- Added wxStreamBuffer::Truncate() (Stas Sergeev)
- Allow using  wxEventLoop in console applications (Lukasz Michalski)
- Added functions for Base64 en/decoding (Charles Reimers)
- Added support for binary data to wxConfig (Charles Reimers)
- Added functions for atomically inc/decrementing integers (Armel Asselin)
- wxLogInterposer has been added to replace wxLogPassThrough and new
  wxLogInterposerTemp was added
- Added support for broadcasting to UDP sockets (Andrew Vincent)

All (Unix):

- Added wx-config --optional-libs command line option (John Labenski)

All (GUI):
